@@ -6,6 +6,8 @@ Bug fix release:
 
  - MODELER-325: resolve transaction issues on save
  - MODELER-326: device command update/delete handling fix
+ - MODELER-327: not all commands were correctly included
+   in generated controller.xml
 
 
 Designer 2.13.2 (2012-06-24 Rosemary)
